added session-based cookie authentication
